--- a/static/editor.css
+++ b/static/editor.css
@@ -1,3 +1,20 @@
+.hidden {
+  display: none;
+}
+
+.section {
+  margin-bottom: 1em;
+}
+
 .text {
-  padding: 0.6em;
+  margin-bottom: 0.6em;
+  color: var(--vscode-descriptionForeground);
+}
+
+.filename {
+  color: var(--vscode-textPreformat-foreground);
+}
+
+button {
+  max-width: 300px;
 }
